kakfa-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kafka-client
  namespace: cluster-1
spec:
  containers:
  - name: kafka-client
    image: confluentinc/cp-enterprise-kafka:6.0.1
    command:
      - sh
      - -c
      - "exec tail -f /dev/null"
