c3-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: cc
  namespace: cluster-c3
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: c3-cp-control-center
              servicePort: 9021
            path: /
